update echat ui

--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="/favicon.ico" sizes="192x192" type="image/x-icon" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Uhmm...! - A modern, secure chat app that connects people quickly and easily" />
+  <meta name="description" content="Echat...! - A modern, secure chat app that connects people quickly and easily" />
   <link rel="apple-touch-icon" href="/logo192.png" />
-  <meta property="og:title" content="Uhmm...! - A modern, secure chat app" />
+  <meta property="og:title" content="Echat...! - A modern, secure chat app" />
   <meta property="og:description"
-    content="Uhmm...! - A modern, secure chat app that connects people quickly and easily">
-  <meta property="og:image" content="/uhm-preview.png">
-  <meta property="og:url" content="http://uhm.ermis.network">
-  <meta property="twitter:title" content="Uhmm...! - A modern, secure chat app">
+    content="Echat...! - A modern, secure chat app that connects people quickly and easily">
+  <meta property="og:image" content="/echat-preview.png">
+  <meta property="og:url" content="http://echat.ermis.network">
+  <meta property="twitter:title" content="Echat...! - A modern, secure chat app">
   <meta property="twitter:description"
-    content="Uhmm...! - A modern, secure chat app that connects people quickly and easily">
-  <meta name="twitter:image" content="/uhm-preview.png">
+    content="Echat...! - A modern, secure chat app that connects people quickly and easily">
+  <meta name="twitter:image" content="/echat-preview.png">
   <meta name="twitter:card" content="summary_large_image">
   <meta property="og:type" content="website">
   <link rel="manifest" href="/manifest.json" />
@@ -25,7 +25,7 @@
   <!-- <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap"
     rel="stylesheet" /> -->
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap" rel="stylesheet" />
-  <title>Uhmm...!</title>
+  <title>Echat...!</title>
 </head>
 
 <body>
