--- a/index.html
+++ b/index.html
@@ -6,14 +6,12 @@
   <link rel="icon" href="/favicon.ico" sizes="192x192" type="image/x-icon" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Echat...! - A modern, secure chat app that connects people quickly and easily" />
+  <meta name="description" content="Echat - A modern, secure chat app that connects people quickly and easily" />
   <link rel="apple-touch-icon" href="/logo192.png" />
-  <meta property="og:title" content="Echat...! - A modern, secure chat app" />
-  <meta property="og:description"
-    content="Echat...! - A modern, secure chat app that connects people quickly and easily">
+  <meta property="og:title" content="Echat - A modern, secure chat app" />
+  <meta property="og:description" content="Echat - A modern, secure chat app that connects people quickly and easily">
   <meta property="og:image" content="/echat-preview.png">
-  <meta property="og:url" content="http://echat.ermis.network">
-  <meta property="twitter:title" content="Echat...! - A modern, secure chat app">
+  <meta property="twitter:title" content="Echat - A modern, secure chat app">
   <meta property="twitter:description"
     content="Echat...! - A modern, secure chat app that connects people quickly and easily">
   <meta name="twitter:image" content="/echat-preview.png">
